--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>br.com.caelum</groupId>
     <artifactId>ingresso</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
 
     <properties>
